--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "<%= appName %>",
+  "name": "snow-normal",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,9 +7,11 @@
     "start": "am s",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "<%= author %>",
+  "author": "liujianchao1",
   "license": "ISC",
   "dependencies": {
-    "@o2team/ambient-dat.gui": "^0.7.7"
+    "@o2team/ambient-dat.gui": "^0.7.7",
+    "lodash": "^4.17.10",
+    "preloader.js": "^1.1.3"
   }
 }
