--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preloader.js": "^1.1.3"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1"
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.7.0"
   }
 }
