--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "dependencies": {
     "@o2team/ambient-dat.gui": "^0.7.7",
+    "babel-runtime": "^6.26.0",
     "lodash": "^4.17.11",
     "preloader.js": "^1.1.3"
   },
   "devDependencies": {
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0"
   }
 }
