--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "preloader.js": "^1.1.3"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-runtime": "^6.26.0"
   }
 }
