--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@ node_modules/
 .git/
 .cache/
 .DS_Store
-dist/*.js
+dist/bundle-*.js
+dist/config-*.js
+dist/control-*.js
+dist/*/
 dist/*.css
-dist/src/
 plugins/
 package-lock.json
