--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@o2team/ambient-dat.gui": "^0.7.9",
+    "@o2team/ambient-report": "^1.0.3",
     "babel-runtime": "^6.26.0",
     "lodash": "^4.17.11",
     "preloader.js": "^1.1.3"
